--- a/src/arm_state/CMakeLists.txt
+++ b/src/arm_state/CMakeLists.txt
@@ -196,3 +196,6 @@ include_directories(
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+
+add_executable(arm_state src/arm_state.cpp)
+target_link_libraries(arm_state ${catkin_LIBRARIES})
