--- a/src/arm_state/package.xml
+++ b/src/arm_state/package.xml
@@ -50,10 +50,13 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>dynamixel_sdk</build_depend>
+  <build_depend>dynamixel_workbench</build_depend>
   <build_depend>roscpp</build_depend>
   <build_export_depend>dynamixel_sdk</build_export_depend>
+  <build_export_depend>dynamixel_workbench</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>dynamixel_sdk</exec_depend>
+  <exec_depend>dynamixel_workbench</exec_depend>
   <exec_depend>roscpp</exec_depend>
 
 
