Update depend packages
dynamixel_workbench_toolboxを依存関係から削除し、arm_state.hppをインクルードするように変更。

--- a/src/arm_state/CMakeLists.txt
+++ b/src/arm_state/CMakeLists.txt
@@ -9,7 +9,6 @@ project(arm_state)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   dynamixel_sdk
-  dynamixel_workbench
   roscpp
 )
 
@@ -116,7 +115,7 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+include
   ${catkin_INCLUDE_DIRS}
 )
 
