--- a/src/arm_operate/CMakeLists.txt
+++ b/src/arm_operate/CMakeLists.txt
@@ -116,7 +116,7 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+include
   ${catkin_INCLUDE_DIRS}
 )
 
@@ -197,3 +197,6 @@ include_directories(
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+
+add_executable(arm_operate src/arm_operate.cpp)
+target_link_libraries(arm_operate ${catkin_LIBRARIES})
