--- a/src/EnterZen_joy/CMakeLists.txt
+++ b/src/EnterZen_joy/CMakeLists.txt
@@ -10,6 +10,7 @@ project(EnterZen_joy)
 find_package(catkin REQUIRED COMPONENTS
   joy
   roscpp
+  std_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -115,7 +116,6 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
   ${catkin_INCLUDE_DIRS}
 )
 
@@ -132,7 +132,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/EnterZen_joy_node.cpp)
+add_executable(${PROJECT_NAME} src/EnterZen_joy.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -145,9 +145,7 @@ include_directories(
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(EnterZen_joy ${catkin_LIBRARIES})
 
 #############
 ## Install ##
